<resources>
    <string name="app_name">Colors</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_color_mode_key">color_mode</string>
    <string name="pref_color_mode_label">Color Mode</string>

    <string name="pref_color_mode_default">@string/pref_color_mode_rgb</string>
    <string name="pref_color_mode_argb">argb</string>
    <string name="pref_color_mode_rgb">rgb</string>
    <string name="pref_color_mode_cmyk">cmyk</string>
    <string name="pref_color_mode_cmyk255">cmyk255</string>
    <string name="pref_color_mode_hsv">hsv</string>
    <string name="pref_color_mode_hsl">hsl</string>

    <string name="pref_color_mode_label_argb">ARGB</string>
    <string name="pref_color_mode_label_rgb">RGB</string>
    <string name="pref_color_mode_label_cmyk">CMYK</string>
    <string name="pref_color_mode_label_cmyk255">CMYK255</string>
    <string name="pref_color_mode_label_hsv">HSV</string>
    <string name="pref_color_mode_label_hsl">HSL</string>

    <string name="pref_indicator_mode_key">indicator_mode</string>
    <string name="pref_indicator_mode_label">Indicator Mode</string>

    <string name="pref_indicator_mode_default">@string/pref_indicator_mode_hex</string>
    <string name="pref_indicator_mode_hex">hex</string>
    <string name="pref_indicator_mode_decimal">decimal</string>

    <string name="pref_indicator_mode_label_hex">Hex</string>
    <string name="pref_indicator_mode_label_decimal">Decimal</string>


</resources>
